--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -24,6 +24,11 @@
         {{{json key='phone' value=phone}}},
         {{{json key='title' value=title}}},
         {{{json key='email' value=email}}},
+        "email_consent" : {{#compare email_consent '===' 'on'}}true{{else}}false{{/compare}},
+        "public_profile" : {{#compare public_profile '===' 'on'}}true{{else}}false{{/compare}},
+        {{{json key='admin_ward' value=admin_ward}}},
+        {{{json key='msoa' value=msoa}}},
+        {{{json key='nuts' value=nuts}}},
         {{{json key='email_consent' value=@root.data.accountInfo.email_consent}}},
         {{{json key='local_authority' value=local_authority}}},
         {{{json key='tsi_contact_email' value=tsi_contact_email}}},
