--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-<head prefix="og: http://ogp.me/ns#">
+<head prefix="og: http://ogp.me/ns# profile: http://ogp.me/ns/profile#">
   <meta charset="utf-8">
   {{{layoutParts.head}}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
