--- a/configuration/templates/errors/404.hbs
+++ b/configuration/templates/errors/404.hbs
@@ -1,8 +1,8 @@
 <div class="empty">
   <div class="empty-icon">
-    <span class="fal fa-exclamation-circle fa-3x"></span>
+    <span class="fal fa-question-circle fa-3x text-error"></span>
   </div>
-  <p class="empty-title h5">Error 404: The page you requested could not be found</p>
+  <p class="empty-title h4">Error 404: The page you requested could not be found</p>
   <p class="empty-subtitle">Please try again, but contact us if the problem persists.</p>
   <div class="empty-action">
     <a href="/" class="btn btn-primary">Home</a>
