--- a/configuration/templates/errors/500.hbs
+++ b/configuration/templates/errors/500.hbs
@@ -1,8 +1,8 @@
-<div class="empty bg-error">
+<div class="empty">
   <div class="empty-icon">
-    <span class="fal fa-exclamation-circle fa-3x"></span>
+    <span class="fal fa-exclamation-circle fa-3x text-error"></span>
   </div>
-  <p class="empty-title h5">Error</p>
+  <p class="empty-title h4">Error 500: Something went wrong</p>
   <p class="empty-subtitle">This site is currently in development.</p>
   <p class="empty-subtitle">Please try again, but contact us with a screenshot and as much information as you can provide if this happens again.</p>
   <div class="empty-action">
