--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -66,7 +66,7 @@
                 <div class="columns">
                   <div class="column col-1 text-left">
                     <div class="form-group b-margin">
-                      <input class="form-input inline-edit" name="hours" min="0.1" value="{{hours}}">
+                      <input class="form-input inline-edit" name="hours" placeholder="0" type="number" step="0.5" min="0.5" value="{{hours}}">
                     </div>
                   </div>
                   <div class="column col-1"></div>
