--- a/configuration/emails/welcome-body.mjml
+++ b/configuration/emails/welcome-body.mjml
@@ -6,10 +6,11 @@
         </mj-column>
       </mj-section>
 
-
       <mj-section>
         <mj-column padding="0px">
           <mj-text font-size="16px" padding="0px" line-height="20px" color="#000000" font-family="Montserrat, Helvetica, Arial, sans-serif">
+            <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
+
             <p>Hello {{@root.data.accountInfo.first_name}}, welcome to the {{@root.context.metaData.title}}!</p>
 
             <p>{{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
@@ -23,14 +24,12 @@
         </mj-column>
       </mj-section>
 
-
       <mj-section background-color="#D7D3CC" padding="0px">
         <mj-column padding="10px">
           <mj-text font-size="14px" color="#ffffff" font-family="Montserrat, helvetica, Arial, sans-serif" padding="0px 0px 15px">
             <p style="margin:0px;">
             </p>
           </mj-text>
-
         </mj-column>
       </mj-section>
     </mj-wrapper>
