--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -175,6 +175,7 @@
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
+                                          <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
                                           <p>Hello,</p>
                                           <p>This is a confirmation email from the {{@root.context.metaData.title}} website. {{first_name}} {{last_name}}, has named you as their parent or guardian.</p>
                                           <p>{{@root.context.metaData.fullTitle}} are the Scottish Government’s way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.</p>
