--- a/configuration/partials/emails/hours-verify-reminder-body.html
+++ b/configuration/partials/emails/hours-verify-reminder-body.html
@@ -175,6 +175,7 @@
                                     <tr>
                                       <td align="left" style="font-size:0px;padding:0px;word-break:break-word;">
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
+                                          <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
                                           <p>Dear Sir or Madam,</p>
                                           <p>
                                             {{@root.data.accountInfo.first_name}} {{@root.data.accountInfo.last_name}}
