--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -372,7 +372,7 @@
       <div class="footer-main">
         <div class="container">
           <div class="columns">
-            <div class="column col-3 col-lg-6 col-md-12 info">
+            <div class="column col-3 col-xl-6 col-md-12 info">
               <h4>Help</h4>
               <p class="b-margin">
                 {{#if @root.data.accountInfo.local_authority ~}}
@@ -396,7 +396,7 @@
                 {{/each ~}}
               </ul>
             </div>
-            <div class="column col-3 col-lg-6 col-md-12 contact">
+            <div class="column col-3 col-xl-6 col-md-12 contact">
               <h4 class="hide-md">&nbsp;</h4>
               <ul class="fa-ul">
                 <li>
@@ -421,6 +421,12 @@
                           <li>
                             <span class="fa-li"><span class="fas fa-phone fa-flip-horizontal"></span></span>
                             <a href="tel:+44{{replace phone ' ' ''}}">{{phone}}</a>
+                          </li>
+                        {{/if ~}}
+                        {{#if website ~}}
+                          <li>
+                            <span class="fa-li"><span class="fas fa-link"></span></span>
+                            <a href="{{website}}" target="_blank">{{replace (replace (replace website 'https://' '') 'http://' '') 'www.' ''}}</a>
                           </li>
                         {{/if ~}}
                         {{#if twitter ~}}
@@ -458,7 +464,7 @@
                 {{/if ~}}
               </ul>
             </div>
-            <div class="column col-6 col-lg-12 about">
+            <div class="column col-6 col-xl-12 about">
               <h4>About</h4>
               <p class="b-margin">
                 {{@root.context.metaData.fullTitle}} is run by the <a href="https://scvo.org">Scottish Council for Voluntary Organisations</a> and supported by the <a href="https://www.gov.scot/policies/third-sector">Scottish Government</a> and Scotland's <a href="https://www.gov.scot/policies/third-sector/third-sector-interfaces">Third Sector Interfaces</a>.
