--- a/configuration/partials/local-contact-info.hbs
+++ b/configuration/partials/local-contact-info.hbs
@@ -11,15 +11,15 @@
   please contact <strong>{{title}}</strong> who are responsible for the {{@root.context.metaData.title}} {{#if island}}on{{else}}in{{/if}} {{#if area}}{{area}}{{else}}{{../local_authority}}{{/if}}. If you have moved, please update your postcode on your <a href="/account">account</a>.
 </p>
 <p>
-  {{#if phone}}Phone: {{phone}}<br />{{/if}}
   {{#if email}}Email: <a href="mailto:{{email}}">{{email}}</a><br />{{/if}}
-  {{#if website}}Website: <a href="{{fixUrl website}}" target="_blank">{{replace (replace (replace website "www." "") "https://" "") "http://" ""}}</a>{{/if}}
+  {{#if phone}}Phone: {{phone}}<br />{{/if}}
+  {{#if website}}Website: <a href="{{fixUrl website}}" target="_blank">{{replace (replace (replace website 'https://' '') 'http://' '') 'www.' ''}}</a>{{/if}}
 </p>
 <p>
   {{#if twitter}}<a href="{{fixUrl twitter}}" target="_blank"><span class="fab fa-twitter fa-fw fa-2x"></span></a>{{/if}}
   {{#if facebook}}<a href="{{fixUrl facebook}}" target="_blank"><span class="fab fa-facebook fa-fw fa-2x"></span></a>{{/if}}
-  {{#if youtube}}<a href="{{fixUrl youtube}}" target="_blank"><span class="fab fa-youtube fa-fw fa-2x"></span></a>{{/if}}
   {{#if instagram}}<a href="{{fixUrl instagram}}" target="_blank"><span class="fab fa-instagram fa-fw fa-2x"></span></a>{{/if}}
+  {{#if youtube}}<a href="{{fixUrl youtube}}" target="_blank"><span class="fab fa-youtube fa-fw fa-2x"></span></a>{{/if}}
 </p>
 {{/if ~}}
 {{/each ~}}
