--- a/src/main.scss
+++ b/src/main.scss
@@ -1561,6 +1561,10 @@ footer {
   }
 }
 
+::placeholder {
+  color: $gray-color;
+}
+
 ::-moz-selection {
   color: #fff;
   background: $dark-color;
