new postcode fields adapted

--- a/configuration/templates/account/auth/user-body-submit.hbs
+++ b/configuration/templates/account/auth/user-body-submit.hbs
@@ -27,10 +27,10 @@
         {{{json key='email' value=email}}},
         "email_consent" : {{#compare email_consent '===' 'on'}}true{{else}}false{{/compare}},
         "public_profile" : {{#compare public_profile '===' 'on'}}true{{else}}false{{/compare}},
-        {{{json key='admin_ward' value=admin_ward}}},
-        {{{json key='msoa' value=msoa}}},
-        {{{json key='nuts' value=nuts}}},
-
+        {{{json key='ward_code' value=ward_code}}},
+        {{{json key='district_code' value=district_code}}},
+        {{{json key='nuts_3_code' value=nuts_3_code}}},
+        {{{json key='constituency_code' value=constituency_code}}},
         {{{json key='local_authority' value=local_authority}}},
         {{{json key='tsi_contact_email' value=tsi_contact_email}}},
         {{{json key='tsi_area' value=tsi_area}}},
