removed flawed bit of code on query hours

--- a/configuration/templates/volunteering/query-hours.hbs
+++ b/configuration/templates/volunteering/query-hours.hbs
@@ -82,7 +82,7 @@
                     <button type="submit" class="btn btn-block btn-success inline-update-button">Verify</button>
                   </div>
                   <div class="column col-1 text-left">
-                    <a href="/admin-delete-hours?hours_id={{hours_id}}&c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="btn btn-block btn-error inline-delete-button" data-component="TasksTrigger" data-success-hide="true" data-TasksTrigger="ajax-delete-handler" data-next-task="empty-collapse">Remove</a>
+                    <a href="/admin-delete-hours?hours_id={{hours_id}}&c={{@root.request.params.query.c}}&user_id={{@root.request.params.query.user_id}}" class="btn btn-block btn-error inline-delete-button" data-component="TasksTrigger" data-success-hide="true" data-TasksTrigger="ajax-delete-handler" >Remove</a>
                   </div>
                   {{#if claim_code ~}}
                     <div class="column col-2 text-left">
