--- a/configuration/templates/account/auth/user-body-update.hbs
+++ b/configuration/templates/account/auth/user-body-update.hbs
@@ -4,6 +4,7 @@
       {{#json}}
         {{{json key='hours_verify_code' value=@root.data.accountInfo.hours_verify_code}}},
         {{{json key='hours_verify_award' value=@root.data.accountInfo.hours_verify_award }}},
+        {{{json key='hours_verify_sent_date' value=@root.data.accountInfo.hours_verify_sent_date}}},
 
         {{#if @root.data.codeRequired}}
           {{{json key='approval_code' value=code}}},
