--- a/configuration/emails/hours-verify-complete-body.mjml
+++ b/configuration/emails/hours-verify-complete-body.mjml
@@ -15,10 +15,10 @@
             <p>Dear {{@root.data.accountInfo.first_name}},</p>
 
             <p>
-              Congratulations! You have been awared your Saltire {{@root.data.accountInfo.hours_verify_award}} Hours Award!
+              Congratulations! You have been awarded your Saltire {{@root.data.accountInfo.hours_verify_award}} Hours Award!
             </p>
             <p>
-              Please visit the <a href="https://{{@root.request.headers.host}}/awards">go to the Saltire Awards site</a> to view, download and print it.
+              Please <a href="https://{{@root.request.headers.host}}/awards">visit the Saltire Awards site</a> to view, download or print it.
             </p>
 
             {{#if @root.data.ysCode}}
@@ -28,7 +28,7 @@
 
             <p>To redeem your points and access Rewards become a Young Scot Member.</p>
 
-            <p><a href="https://membership.young.scot//home/webHP?requestType=ApplicationRH&actionVal=homePage&screenId=114&redirectPage=V21LVTEwdnRidnZSMW5BNGZoa2hsZzlSRUJVcFJuMHZyZ3RCdEgyRnR6Smhvc1UvTlUvOW1yTklhTEFocEhtd0pwM0FtUzdDUUQrTHR2Mkp1RFdoaGlvVUpRZ1d3TjZISTJkRDh1ZUQ2TzQ9&templateId=138&dynamicURL=TGxxc0tGU1F5ZGZrYjk2eHpkY3BQNGIwL05Zb0J1eTB5ak9tWDVDdDRyUHpxdGRqMjBLakNiZDViK2diaTdzbGJha0ZWSlBVOVNDejlJU0JxTjhqOWc9PQ%3d%3d#MQ==">Log in to site</a>
+            <p><a href="https://membership.young.scot//home/webHP?requestType=ApplicationRH&actionVal=homePage&screenId=114&redirectPage=V21LVTEwdnRidnZSMW5BNGZoa2hsZzlSRUJVcFJuMHZyZ3RCdEgyRnR6Smhvc1UvTlUvOW1yTklhTEFocEhtd0pwM0FtUzdDUUQrTHR2Mkp1RFdoaGlvVUpRZ1d3TjZISTJkRDh1ZUQ2TzQ9&templateId=138&dynamicURL=TGxxc0tGU1F5ZGZrYjk2eHpkY3BQNGIwL05Zb0J1eTB5ak9tWDVDdDRyUHpxdGRqMjBLakNiZDViK2diaTdzbGJha0ZWSlBVOVNDejlJU0JxTjhqOWc9PQ%3d%3d#MQ==">Log in to the YoungScot site</a>
               to add your points code: {{@root.data.ysCode}}</p>
 
             <p>Rewards opportunities change all the time so remember to log in regularly to see what’s new.</p>
