--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -58,7 +58,7 @@
     <div class="form-group">
       <div class="column col-4 col-sm-12">
         <label class="form-label" for="school_college_name">
-          School/college/university
+          School/college/university (optional)
         </label>
       </div>
       <div class="column col-8 col-sm-12">
@@ -75,7 +75,7 @@
   {{else}}
     <div class="form-group">
       <div class="column col-4 col-sm-12">
-        <label class="form-label" for="title">Organisation Name</label>
+        <label class="form-label" for="title">Organisation</label>
       </div>
       <div class="column col-8 col-sm-12">
         <input class="form-input" id="organisation_name" name="organisation_name" type="text" value="{{@root.data.accountInfo.organisation_name}}" placeholder="" autocomplete="nope" data-lpignore="true" data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.organisation_name}}>
